--- a/src/components/image-slider/image-slider.module.css
+++ b/src/components/image-slider/image-slider.module.css
@@ -1,15 +1,26 @@
 .wrapper {
+  --transition-delay: 300ms;
   position: relative;
   width: 100%;
   height: 100%;
   background-color: grey;
 }
 
+.images {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .slider-image {
   display: block;
+  flex-shrink: 0;
+  flex-grow: 0;
   object-fit: cover;
   width: 100%;
   height: 100%;
+  transition: translate var(--transition-delay) ease-in-out;
 }
 
 .slider-button {
@@ -19,11 +30,15 @@
   bottom: 0;
   padding: 1rem;
   cursor: pointer;
-  transition: background-color 100ms ease-in-out;
+  transition: background-color var(--transition-delay) ease-in-out;
 }
 
 .slider-button:hover {
-  background-color: rgba(0, 0, 0, 0.5)
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.slider-button:hover > * {
+  animation: squish var(--transition-delay) ease-in-out;
 }
 
 .slider-button.left {
@@ -32,4 +47,10 @@
 
 .slider-button.right {
   right: 0;
+}
+
+@keyframes squish {
+  50% {
+    scale: 1.4 0.6;
+  }
 }
